# deltoids

./: AGENTS.md  CHANGELOG.md  CNAME  Cargo.toml  LICENSE  Makefile  README.md  clippy.toml  dist-workspace.toml  package.json
crates/deltoids/: Cargo.toml
crates/deltoids-cli/: Cargo.toml
crates/deltoids-cli/src/: cli.rs  edit.rs  events.rs  hash_edit.rs  hash_read.rs  hashline.rs  lib.rs  main.rs  scroll.rs  sidebar.rs  sidebar_width.rs  terminal.rs  trace_store.rs  tui.rs  types.rs  write.rs
crates/deltoids-cli/src/cli/: edit.rs  hash_edit.rs  hash_read.rs  hook.rs  pager.rs  review.rs  traces.rs  tui.rs  write.rs
crates/deltoids-cli/src/cli/browse/: command.rs  help.rs  mod.rs  mode.rs  suspend.rs  tests.rs  watch.rs
crates/deltoids-cli/src/cli/browse/files/: diff_pane.rs  mod.rs  model.rs  reload.rs  sidebar_pane.rs  test_support.rs
crates/deltoids-cli/src/cli/browse/live/: detail.rs  feed_pane.rs  mod.rs  model.rs  test_support.rs
crates/deltoids-cli/src/cli/browse/traces/: detail.rs  entries_pane.rs  mod.rs  model.rs  reload.rs  scripted.rs  test_support.rs  traces_pane.rs
crates/deltoids-cli/src/cli/review/: diff_pane.rs  help.rs  mod.rs  model.rs  reload.rs  sidebar_pane.rs  test_support.rs
crates/deltoids-cli/src/cli/serve/: assets.rs  mod.rs  router.rs
crates/deltoids-cli/src/cli/serve/assets/: app.js  index.html  style.css
crates/deltoids-cli/src/hashline/: anchor.rs  apply.rs  mod.rs
crates/deltoids-cli/src/sidebar/: icons.rs  mod.rs  render.rs  status.rs  test_support.rs  tree.rs
crates/deltoids-cli/src/tui/: detail.rs  entries_pane.rs  mod.rs  reload.rs  scripted.rs  test_support.rs  traces_pane.rs
crates/deltoids-cli/tests/: cli.rs  missing_blob.rs  trace_reuse.rs  write_cli.rs
crates/deltoids/src/: config.rs  content.rs  engine.rs  git.rs  highlight.rs  hunk_header.rs  language.rs  lib.rs  parse.rs  render.rs  render_html.rs  render_tui.rs  scope.rs  structural.rs  symlink.rs  syntax.rs
crates/deltoids/src/scope/: hunk_builder.rs  range.rs
crates/deltoids/src/structural/: classify.rs  diff.rs  outline.rs  pair.rs  render.rs  symbol.rs
crates/deltoids/src/structural/classify/: tests.rs
crates/deltoids/src/structural/outline/: tests.rs
crates/deltoids/src/structural/pair/: tests.rs
crates/deltoids/src/structural/symbol/: tests.rs
crates/deltoids/tests/: diff_cases.rs  scope_multi_pair_replace.rs  scope_new_file_no_ancestors.rs  scope_no_context_only_hunks.rs  structural_cases.rs
crates/deltoids/tests/diff_cases/: README.md  harness.rs
crates/deltoids/tests/diff_cases/cases/010-identical-files/: 1-case.md
crates/deltoids/tests/diff_cases/cases/015-new-file-from-empty/: 1-case.md  3-updated.yml  4-expected.diff
crates/deltoids/tests/diff_cases/cases/020-deleted-file-to-empty/: 1-case.md  4-expected.diff
crates/deltoids/tests/diff_cases/cases/025-plain-text-line-added/: 1-case.md  4-expected.diff
crates/deltoids/tests/diff_cases/cases/030-plain-text-line-replaced/: 1-case.md  3-updated.txt  4-expected.diff
crates/deltoids/tests/diff_cases/cases/035-unsupported-language-extension/: 1-case.md  4-expected.diff
crates/deltoids/tests/diff_cases/cases/040-rust-line-in-function/: 1-case.md  2-original.rs  3-updated.rs  4-expected.diff
crates/deltoids/tests/diff_cases/cases/042-rust-add-new-function/: 1-case.md  2-original.rs  3-updated.rs  4-expected.diff
crates/deltoids/tests/diff_cases/cases/043-rust-delete-entire-function/: 1-case.md  2-original.rs  3-updated.rs  4-expected.diff
crates/deltoids/tests/diff_cases/cases/045-rust-nested-impl-method/: 1-case.md  2-original.rs  3-updated.rs  4-expected.diff
crates/deltoids/tests/diff_cases/cases/046-rust-suppress-brace-alignment-artifact/: 1-case.md  2-original.rs  3-updated.rs  4-expected.diff
crates/deltoids/tests/diff_cases/cases/047-rust-merged-hunk-lca-breadcrumb/: 1-case.md  2-original.rs  3-updated.rs  4-expected.diff
crates/deltoids/tests/diff_cases/cases/048-rust-large-function-falls-back-to-default-context/: 1-case.md  2-original.rs  3-updated.rs  4-expected.diff
crates/deltoids/tests/diff_cases/cases/050-rust-top-level-statement/: 1-case.md  3-updated.rs  4-expected.diff
crates/deltoids/tests/diff_cases/cases/055-rust-add-helper-no-duplication/: 1-case.md  2-original.rs  4-expected.diff
crates/deltoids/tests/diff_cases/cases/056-rust-const-multiline-array-context/: 1-case.md  2-original.rs  3-updated.rs  4-expected.diff
crates/deltoids/tests/diff_cases/cases/057-rust-multiline-struct-literal-context/: 1-case.md  2-original.rs  3-updated.rs  4-expected.diff
crates/deltoids/tests/diff_cases/cases/060-rust-comment-anchor-inside-fn/: 1-case.md  2-original.rs  3-updated.rs  4-expected.diff
crates/deltoids/tests/diff_cases/cases/061-rust-comment-only-edit-above-method/: 1-case.md  2-original.rs  3-updated.rs  4-expected.diff
crates/deltoids/tests/diff_cases/cases/062-rust-attribute-only-edit-above-fn/: 1-case.md  2-original.rs  3-updated.rs  4-expected.diff
crates/deltoids/tests/fixtures/: scope_before_comment_anchor.rs  scope_multi_pair_after.ts
crates/deltoids/tests/structural_cases/: README.md  harness.rs
crates/edit/: Cargo.toml
crates/edit-cli/: Cargo.toml
crates/edit-cli/src/: config.rs  highlight.rs  lib.rs  theme.rs  trace_store.rs  tui.rs
crates/edit-tui/: Cargo.toml
crates/edit-tui/src/: main.rs  tui.rs
crates/edit/src/: lib.rs
crates/rv-cli/: Cargo.toml
crates/rv-cli/src/: main.rs  sidebar.rs
crates/tests/: Cargo.toml
crates/tests/fixtures/claude-code/: post-edit-1.json  post-edit-2.json  post-write-create.json
crates/tests/src/: lib.rs
crates/tests/tests/: claude_code_hook.rs  hash_cli.rs  pager_gitcrypt.rs  pager_symlink.rs  tui_cli.rs
deltoids/: Cargo.toml  README.md
deltoids/src/: intraline.rs  lib.rs  main.rs  parse.rs  render.rs  reverse.rs  scope.rs  syntax.rs
deltoids/tests/: non_diff_passthrough.rs  scope_comment_anchor.rs  scope_new_helper_duplication.rs
deltoids/tests/fixtures/: scope_after_comment_anchor.rs  scope_new_helper_after.rs
(+354 files in other folders)
