[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
description = "Tools for reviewing code in the agentic era"
authors = ["Juan Ibiapina <juanibiapina@gmail.com>"]
license = "MIT"
repository = "https://github.com/juanibiapina/deltoids"
homepage = "https://github.com/juanibiapina/deltoids"

[workspace.lints.clippy]
too_many_arguments = "warn"
too_many_lines = "warn"
excessive_nesting = "warn"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
