[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.12.1"
edition = "2024"
description = "Tools for reviewing code in the agentic era"
authors = ["Juan Ibiapina <juanibiapina@gmail.com>"]
license = "MIT"
repository = "https://github.com/juanibiapina/deltoids"
homepage = "https://github.com/juanibiapina/deltoids"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
too_many_arguments = "deny"
too_many_lines = "deny"
excessive_nesting = "deny"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
