[package]
name = "deltoids-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
license.workspace = true

[[bin]]
name = "deltoids"
path = "src/main.rs"

[dependencies]
deltoids = { path = "../deltoids", features = ["blob-resolve"] }
terminal_size = "0.4"

[dev-dependencies]
git2 = "0.20"
tempfile = "3"

[lints]
workspace = true
