[package]
name = "deltoids-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

# `use-dev-tty` (in the crossterm dependency below) swaps the input
# source for a `filedescriptor`/poll(2) one. Required on macOS: mio's
# kqueue `EVFILT_READ` registration on a fresh `/dev/tty` fd returns
# EINVAL, crossterm swallows the error, and every later `event::poll`
# surfaces a generic "Failed to initialize input reader". The flag
# matters for the `deltoids review` and `deltoids traces` subcommands.
#
# Pin to crossterm 0.29 to match ratatui-crossterm's copy so cargo
# resolves a SINGLE crossterm and feature-unifies `use-dev-tty` onto it.
# Otherwise our DSR queries (e.g. `get_cursor_position`) route through
# ratatui's `use-dev-tty`-less 0.29 backend and busy-spin forever on macOS.
[[bin]]
name = "deltoids"
path = "src/bin/deltoids.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29", features = ["use-dev-tty"] }
deltoids = { path = "../deltoids", features = ["blob-resolve", "html", "ratatui"] }
dirs = "6"
fs2 = "0.4"
notify = "8"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
terminal_size = "0.4"
toml = "1"
ulid = "1"
unicode-width = "0.2"
xxhash-rust = { version = "0.8", features = ["xxh32"] }

[dev-dependencies]
git2 = "0.21"
tempfile = "3"

[lints]
workspace = true

# Override the homebrew formula name produced by cargo-dist so users
# install with `brew install juanibiapina/taps/deltoids` instead of
# `deltoids-cli`. The cargo package name must stay unique within the
# workspace (the library crate already owns `deltoids`).
[package.metadata.dist]
formula = "deltoids"
