[package]
name = "deltoids"
version = "0.1.0"
edition = "2024"

[dependencies]
git2 = "0.20"
regex = "1"
serde = { version = "1", features = ["derive"] }
similar = "3"
syntect = "5"
syntect-assets = { version = "0.23", default-features = false, features = ["regex-fancy"] }
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-css = "0.25"
tree-sitter-go = "0.25"
tree-sitter-hcl = "1.1"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-json = "0.24"
tree-sitter-language = "0.1"
tree-sitter-lua = "0.5"
tree-sitter-md = "0.5"
tree-sitter-python = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-typescript = "0.23"
tree-sitter-yaml = "0.7"
unicode-segmentation = "1"
unicode-width = "0.2"

[lints]
workspace = true
