[package]
name = "deltoids"
version.workspace = true
edition.workspace = true

[dependencies]
dirs = "6"
git2 = "0.20"
toml = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
similar = "3"
syntect = "5"
bat = { version = "0.26", default-features = false, features = ["regex-fancy"] }
terminal-colorsaurus = "1.0"
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-css = "0.25"
tree-sitter-go = "0.25"
tree-sitter-hcl = "1.1"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-json = "0.24"
tree-sitter-language = "0.1"
tree-sitter-lua = "0.5"
tree-sitter-md = "0.5"
tree-sitter-python = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-typescript = "0.23"
tree-sitter-yaml = "0.7"
unicode-segmentation = "1"
unicode-width = "0.2"

[lints]
workspace = true
