[package]
name = "edit-cli"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "edit"
path = "src/bin/edit.rs"

[[bin]]
name = "write"
path = "src/bin/write.rs"

[[bin]]
name = "edit-tui"
path = "src/bin/edit-tui.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
deltoids = { path = "../deltoids" }
fs2 = "0.4"
notify = "7"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = { version = "5.3", default-features = false, features = ["parsing", "regex-fancy"] }
toml = "0.8"
ulid = "1"
unicode-width = "0.2"
dirs = "6"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
