[package]
name = "edit-tui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "edit-tui"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
deltoids = { path = "../deltoids" }
edit = { path = "../edit" }
notify = "7"
ratatui = "0.29"
serde_json = "1"
syntect = { version = "5", default-features = false, features = ["parsing", "regex-fancy"] }
syntect-assets = { version = "0.23", default-features = false, features = ["regex-fancy"] }
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
