[package]
name = "edit"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
deltoids = { path = "../deltoids" }
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
